[gd_scene load_steps=10 format=3 uid="uid://c463elqruuo5v"]

[ext_resource type="PackedScene" uid="uid://g5immh507xlx" path="res://Characters/captain_avery.glb" id="1_6h4cc"]
[ext_resource type="Script" path="res://Characters/captain_avery.gd" id="2_2rxov"]
[ext_resource type="PackedScene" uid="uid://bj8f44agdkdp5" path="res://Models/arrow.tscn" id="3_4dqtx"]
[ext_resource type="PackedScene" uid="uid://cblsqumr6xr7o" path="res://Characters/pirate_hat.tscn" id="3_jj44b"]
[ext_resource type="Script" path="res://CameraController.gd" id="4_en5wr"]

[sub_resource type="SphereShape3D" id="SphereShape3D_dpu64"]
radius = 12.9827

[sub_resource type="Animation" id="Animation_1y2am"]
resource_name = "breathe"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SeaLion_Mesh:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.06, 0.94, 1.06), Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tcow4"]
_data = {
"breathe": SubResource("Animation_1y2am")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8dv0v"]
radius = 5.0
height = 16.0

[node name="captain_avery" instance=ExtResource("1_6h4cc")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
script = ExtResource("2_2rxov")

[node name="SeaLion_Mesh" parent="." index="0"]
transform = Transform3D(1.0311, 0, 0, 0, 0.9689, 0, 0, 0, 1.0311, 0, 0, 0)
visibility_range_end = 150.0
visibility_range_end_margin = 10.0
visibility_range_fade_mode = 1

[node name="Pirate hat2" parent="SeaLion_Mesh" index="0" instance=ExtResource("3_jj44b")]
transform = Transform3D(0.241514, -0.0316806, 0.17512, -0.14766, 0.129103, 0.226999, -0.0993337, -0.268939, 0.0883411, -0.0854291, 6.50795, 2.39209)

[node name="Arrow" parent="." index="1" instance=ExtResource("3_4dqtx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.2522, 1.08482)

[node name="Area3D" type="Area3D" parent="." index="2"]
collision_mask = 2

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.17952)
shape = SubResource("SphereShape3D_dpu64")

[node name="CameraController" type="RemoteTransform3D" parent="." index="3"]
transform = Transform3D(0.959805, 0.160582, -0.230189, 0, 0.820152, 0.572146, 0.280667, -0.549149, 0.787186, -2.68829, 8.57824, 12.4231)
script = ExtResource("4_en5wr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
libraries = {
"": SubResource("AnimationLibrary_tcow4")
}

[node name="StaticBody3D" type="StaticBody3D" parent="." index="5"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.73942, 0)
shape = SubResource("CapsuleShape3D_8dv0v")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
